# Blooming-Lite

./: CMakeLists.txt  CompileAndRun.bat  CompileOnly.bat  InstallEmscripten.bat  README.md  Run.bat  Template.html  gl_render.js  preload.js
custom/: API.h  CardEffects.cpp  CardEffects.h  GameStateManager.cpp  GameStateManager.h  Init.cpp  Init.h  MouseMovement.cpp  MouseMovement.h  Render.cpp  Render.h  Sounds.cpp  Sounds.h  TileBoard.cpp  TileBoard.h  TileDraw.cpp  TileDraw.h
dependencies/python/3.13.3_64bit/: .emsdk_version
src/: Definitions.h  InputHandler.cpp  InputHandler.h  UserInstance.cpp  UserInstance.h  main.cpp
tools/: FontBinConstructor.py  FontBinding.txt  SpriteBinConstructor.py
